--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,18 @@
 {
   "manifest_version": 3,
   "name": "ChatGPT DOM Trimmer",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Antti Kotajärvi",
-  "description": "Optimizes ChatGPT interface",
+  "description": "Keeps ChatGPT tabs fast by trimming old DOM nodes and offering optional cleanup tools.",
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
   },
-  "action": { "default_title": "ThreadTrim" },
+  "permissions": ["storage"],
+  "action": { "default_title": "ChatGPT DOM Trimmer" },
   "background": { "service_worker": "bg.js" },
-  "permissions": ["storage", "activeTab", "scripting"],
-  "host_permissions": [
-    "https://chat.openai.com/*",
-    "https://chatgpt.com/*"
-  ],
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"],
@@ -27,7 +23,7 @@
   "web_accessible_resources": [
     {
       "resources": ["panel.html", "icons/*"],
-      "matches": ["<all_urls>"]
+      "matches": ["https://chat.openai.com/*", "https://chatgpt.com/*"]
     }
   ]
 }
